--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Tor Inge Redalen <toringe@redalen.no>",
   "license": "MIT",
   "dependencies": {
+    "chart.js": "^2.9.3",
     "custom-card-helpers": "^1.3.9",
     "dayjs": "^1.8.20",
     "home-assistant-js-websocket": "^4.4.0",
